--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.3",
+    "ts-node": "^10.9.1",
     "typescript": "5.2.2"
   }
 }
