--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.3.3",
     "ts-node": "^10.9.1",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.1"
   }
 }
